# mylangchain_uv_project

./: .gitignore  main.py  pyproject.toml
00langchainbasic/: 000-0_GenAI_NotLangchain.ipynb  000-1_Groq_연동_basic.ipynb  000-2_LLMChain생성.ipynb  000-3_LangChain_Core_LCEL.ipynb  000Groq_연동_basic.ipynb  001-1_PromptTemplate종류.ipynb  001-2_OutPutParser종류.ipynb  001-4_Prompt_Structured_Output.ipynb  001_LLMChain생성.ipynb  003-1_PydanticParser.ipynb  004-1_Model_Parameter.ipynb  005-1_Model_Parameter_openai.ipynb  005-2_ChatUpstage 활용.ipynb  005_ChatUpstage 활용.ipynb  005_Model_종류.ipynb  006_Gemini활용.ipynb  010_LangServe_Basic.py  011_LangSmith_Basic.ipynb  011_LangSmith_Basic_Upstage.ipynb
01RAG/: 010_RAG_Data_Pipeline[Lecture].ipynb  010_RAG_Pipeline_0Basic_ollama.ipynb  010_RAG_Pipeline_0Basic_openai.ipynb  010_RAG_Pipeline_1DocumentLoader_pdf_Upstage.ipynb  010_RAG_Pipeline_1PdfLoader_Upstage.ipynb  010_RAG_Pipeline_2.1TextSplitter.ipynb  010_RAG_Pipeline_3Embedding.ipynb  010_RAG_Pipeline_4Chroma_FAISS.ipynb  010_RAG_Pipeline_5Retriever.ipynb  011_RAG_DocxLoader_Faiss_Upstage.ipynb  011_RAG_WebBaseLoader_Upstage.ipynb
02Ollama/: 013_OllamaEmbeddings_Qwen.ipynb  013_Ollama_ llama3_활용.ipynb  013_Ollama_DeepSeek-r1_Basic.ipynb  013_Ollama_DeepSeek-r1_Qwen2연동.ipynb  013_Ollama_DeepSeek-r1_Qwen3연동.ipynb
03ChatBot/: 00chatbot_gradioBasic.ipynb  01chatbot_gradio_chatbot.ipynb  02chatbot_gradio_chat_groq.ipynb  03chatbot_gradio_rag_upstage.ipynb  04main_rag_faiss_gradio_chatgpt.py  04main_rag_faiss_gradio_upstage.py
04LangChainTool/: 20-0LangChain_도구(tool)활용Basic.ipynb
(+17 files in other folders)
