[project]
name = "mylangchin-uv-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docx2txt>=0.9",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.128.0",
    "gradio>=6.3.0",
    "gradio-pdf>=0.0.24",
    "groq>=1.0.0",
    "langchain>=1.2.6",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.0",
    "langchain-huggingface>=1.2.0",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.7",
    "langchain-text-splitters>=1.1.0",
    "langchain-upstage>=0.7.5",
    "langserve>=0.3.3",
    "langsmith>=0.6.4",
    "pylance>=1.0.2",
    "pypdf>=4.2.0,<5.0.0",  # pypdf 버전 범위 수정
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.2.0",
    "sse-starlette>=3.2.0",
    "transformers>=4.46.3",
    "typer>=0.21.1",
    "unstructured[docx]>=0.18.27",
    "uvicorn>=0.40.0",
]
